[project]
name = "sorter"
version = "0.1.0"
description = "An automatic sorting shelf for colored plastic bricks"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-circuitpython-pca9685>=3.4.20",
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.1.1",
    "setuptools<=69.5.1",
    "yolov7detect>=1.0.1",
    "yolov9pip>=0.0.4",
]

[dependency-groups]
dev = [
    "license-scanner>=0.4.4",
    "pyrefly>=0.54.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "typeguard>=4.5.1",
]

[tool.license_scanner]
allowed-licenses = [
  "Apache Software License",
  "Apache Software License v2",
  "BSD License",
  "BSD 2-clause License",
  "BSD 2-clause FreeBSD License",
  "BSD 3-clause License",
  "CMU License (MIT-CMU)",
  "ISC License",
  "LicenseRef-NVIDIA-Proprietary",
  "LicenseRef-NVIDIA-Software-License",
  "MIT",
  "Mozilla Public License 2.0 (MPL 2.0)",
  "NVIDIA Proprietary Software",
  "Other/Proprietary License",  # NVIDIA
  "Python Software Foundation License",
  "Python Software Foundation License v2",
]
allowed-packages = [
  "matplotlib_inline",  # BSD 3-clause License
  "numpy",  # BSD 3-clause and MIT License
  "pyrefly",  # MIT License
  "python_dateutil",  # BSD License
]

[tool.pytest.ini_options]
typeguard-packages = """
    brick_camera
    brick_mapping
    cluster_images
    conveyor_belt
    outliers
    servo_channel
    servo_controller
    servo_demo
    servo_shelf
    webcam
    yolo_exporter
"""
